# lab1-game-engines

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.json
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main_test.cpp  old_main.cpp
src/AppState/: AppState.h
src/ConfigReader/: ConfigReader.cpp  ConfigReader.h
src/Objects/: LogoObject.cpp  LogoObject.h  PauseTextObject.cpp  PauseTextObject.h
src/RenderableObject/: RenderableObject.h
src/UI/: UiController.cpp  UiController.h
src/Window/: Window.cpp  Window.h
